# near-registrar

./: .gitignore  Cargo.toml  README.md  build.js  package.json
contracts/rust/: Cargo.toml  README.md
contracts/rust/src/: lib.rs  lib.rs.unordered_map
src/: lib.rs
